@@ -106,6 +106,11 @@
 	(mhc-put-icon icon (+ pos mhc-summary-icon-position)))))
 
 
+(defun mhc-gnus-summary-search-day (yy mm dd)
+  (re-search-forward
+   (format "^\\([0-9]+ | \\)?%02d/%02d" mm dd) nil t))
+
+
 (defun mhc-gnus-summary-mode-setup (date)
   (setq gnus-newsgroup-data (nreverse gnus-newsgroup-data)
 	nnmhc-article-list (nreverse nnmhc-article-list))
@@ -164,6 +169,7 @@
 (put 'mhc-gnus 'get-import-buffer 'mhc-gnus-get-import-buffer)
 (put 'mhc-gnus 'generate-summary-buffer 'mhc-gnus-generate-summary-buffer)
 (put 'mhc-gnus 'insert-summary-contents 'mhc-gnus-insert-summary-contents)
+(put 'mhc-gnus 'summary-search-day 'mhc-gnus-summary-search-day)
 (put 'mhc-gnus 'summary-mode-setup 'mhc-gnus-summary-mode-setup)
 
 ;;; Copyright Notice:
