@@ -27,6 +27,10 @@
 (defconst mhc-mew/header-string
   (let ((str "0 | ")) (put-text-property 0 (length str) 'invisible t str) str))
 
+(defconst mhc-mew/header-string-review
+  (let ((str (concat "0" (char-to-string mew-mark-review) "| ")))
+    (put-text-property 0 (length str) 'invisible t str) str))
+
 (defconst mhc-mew/summary-message-alist
   '((mew-summary-mode . mew-message-mode)
     (mew-virtual-mode . mew-message-mode)))
@@ -101,13 +105,18 @@
 
 (defun mhc-mew-insert-summary-contents (schedule contents icon)
   (let (pos)
-    (insert mhc-mew/header-string)
+    (insert (if schedule mhc-mew/header-string-review mhc-mew/header-string))
     (setq pos (point))
     (insert contents
 	    (mhc-mew/schedule-foldermsg schedule)
 	    "\n")
     (if icon
 	(mhc-put-icon icon (+ pos mhc-summary-icon-position)))))
+
+
+(defun mhc-mew-summary-search-day (yy mm dd)
+  (re-search-forward
+   (format "^0[ %c]| %02d/%02d" mew-mark-review mm dd) nil t))
 
 
 (defun mhc-mew-summary-mode-setup (date)
@@ -188,6 +197,7 @@
 (put 'mhc-mew 'draft-mode 'mhc-mew-draft-mode)
 (put 'mhc-mew 'generate-summary-buffer 'mhc-mew-generate-summary-buffer)
 (put 'mhc-mew 'insert-summary-contents 'mhc-mew-insert-summary-contents)
+(put 'mhc-mew 'summary-search-day 'mhc-mew-summary-search-day)
 (put 'mhc-mew 'summary-mode-setup 'mhc-mew-summary-mode-setup)
 
 ;;; Copyright Notice:
